--- a/Deployment/ingress.yml
+++ b/Deployment/ingress.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: portfolio-ingres
-  namespace: calculator
+  namespace: portfolio
   annotations:
    # Use Traefik as the Ingress controller
     traefik.enable: "true" # Ensure Traefik picks up this Ingress
